<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_accent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_off_white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:background="@color/color_off_white"
            android:contentDescription="@string/logo_description"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/csumb_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:background="@color/color_primary_dark"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/header"
            android:textAllCaps="true"
            android:textColor="@color/color_accent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="35dp"
            android:background="@color/color_primary"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/instructions"
            android:textColor="@color/color_primary_dark" />

        <EditText
            android:id="@+id/etCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/color_off_white"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/hint"
            android:inputType="text"
            android:textColor="@color/color_primary_dark"
            android:textColorHighlight="@color/color_accent"
            android:textColorLink="@color/color_primary_dark" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/search"
            android:textColor="@color/color_accent"
            app:backgroundTint="@color/color_primary_dark" />

        <TextView
            android:id="@+id/tvCourseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:height="25dp"
            android:background="@color/color_off_white"
            android:gravity="center_horizontal|center_vertical"
            android:text="TextView"
            android:textAllCaps="true"
            android:textColor="@color/color_primary_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCourseDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_off_white"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textColor="@color/color_primary_dark" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:height="25dp"
            android:background="@color/color_primary"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/list_of_courses"
            android:textAllCaps="true"
            android:textColor="@color/color_primary_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_accent"
            android:text="@string/list_of_classes"
            android:textColor="@color/color_primary_dark" />

    </LinearLayout>

</ScrollView>